--- a/SEMINARS/S4.md
+++ b/SEMINARS/S4.md
@@ -5,7 +5,7 @@ flowchart LR
     U[Клиент / Браузер / Интеграция]
   end
 
-  subgraph Service[Сервис — приложение]
+  subgraph Service["Сервис — приложение"]
     A[API Gateway / Auth Controller<br/>NFR: NFR-005 RateLimit; NFR-008 Logging]
     S[Auth Service / Бизнес-логика]
     D[(База данных<br/>Сессии и счётчики попыток)]
@@ -56,7 +56,7 @@ flowchart LR
 ---
 ## Приоритизация рисков L×I «US-002 — Вход в систему»
 | Risk ID  | Source (DFD/Row)                     | Consolidated Description                                                   | Threat (S/T/R/I/D/E) | NFR link (ID)              | L (1-5) | Rationale-L                                               | I (1-5) | Rationale-I                                     | **Score (=L×I)** | Decision (Top-5?)                     | ADR candidate                                     |
-| -------- | ------------------------------------ | -------------------------------------------------------------------------- | -------------------- | -------------------------- | ------: | --------------------------------------------------------- | ------: | ----------------------------------------------- | ---------------: | ------------------------------------- | ------------------------------------------------- |
+|----------|--------------------------------------|----------------------------------------------------------------------------|----------------------|----------------------------|--------:|-----------------------------------------------------------|--------:|-------------------------------------------------|-----------------:|---------------------------------------|---------------------------------------------------|
 | **R-01** | Edge: Internet → API (Credentials)   | Массовый подбор (credential stuffing) на `/api/auth/login`.                | S                    | **NFR-005 (#128)**         |       5 | Публичная точка входа, типовой сценарий атак.             |       4 | Возможен компромисс аккаунтов/блокировки.       |           **20** | **Top-5**                             | **RateLimit per (username,IP) + step-up**         |
 | **R-02** | Edge: API → User (JWT)               | Повтор/подмена украденного или просроченного JWT (replay/validation gaps). | S                    | **NFR-006 (#129)**         |       4 | Часто встречается при слабых TTL/проверках `iss/aud/exp`. |       5 | Неавторизованный доступ к данным/операциям.     |           **20** | **Top-5**                             | **JWT TTL+Refresh, strict validation, revoke**    |
 | **R-03** | Edge: Internet → API (RPS)           | DoS/истощение ресурса всплеском логин-запросов.                            | D                    | **NFR-005 (#128)**         |       4 | Лёгкая автоматизация, цель — «горячая» точка.             |       4 | Недоступность логина, косвенно — всего сервиса. |           **16** | **Top-5**                             | **429 + Retry-After, глобальные квоты**           |
@@ -76,13 +76,11 @@ flowchart LR
 ## STRIDE для DFD «US-013 — Импорт CSV»
 
 | Element                   | Data/Boundary  | Threat (S/T/R/I/D/E) | Description                                                  | NFR link (ID) | Mitigation idea (ADR later)                   |
-| ------------------------- | -------------- | -------------------- | ------------------------------------------------------------ |---------------| --------------------------------------------- |
+|---------------------------|----------------|----------------------|--------------------------------------------------------------|---------------|-----------------------------------------------|
 | **Edge: User → API**      | HTTPS / CSV    | **T**                | Подмена содержимого CSV, инъекция формата, превышение лимита | NFR-009       | Schema & size validation, reject extra cols   |
-|                           |                | **D**                | Массовая загрузка больших файлов → истощение ресурсов        | NFR-009       | Rate limit + async upload queue               |
 | **Node: API**             | Controller     | **R**                | Отсутствие трассировки загрузок → нельзя доказать источник   | NFR-012       | Structured JSON logs with correlation_id      |
 | **Edge: API → Worker**    | Task JSON      | **T**                | Изменение метаданных задания (фальшивые пути/ID)             | NFR-010       | Signed payload / validation in worker         |
 | **Node: Worker**          | Business logic | **I**                | Ошибка валидации → вставка неконсистентных данных            | NFR-010       | Full transactional import, rollback on fail   |
-|                           |                | **D**                | Большие CSV или бесконечные задачи блокируют очередь         | NFR-011       | Background scaling, queue timeout             |
 | **Edge: Worker → DB**     | SQL            | **T**                | SQL-инъекция или частичные записи                            | NFR-010       | ORM + parameterized queries, transactions     |
 | **Edge: Worker → S3**     | File IO        | **I**                | Утечка временных CSV через S3 ACL                            | NFR-011       | Private bucket, expiring links                |
 | **Node: DB**              | Data store     | **E**                | Повышение прав через ручной импорт напрямую                  | NFR-010       | Role-based DB access, readonly connections    |
