--- a/SEMINARS/S3.md
+++ b/SEMINARS/S3.md
@@ -46,10 +46,10 @@
 
 ## Таблица реестра
 
-| ID          | User Story / Feature | Category                     | Requirement (NFR)                                                                                                                                                                                                                                                                        | Rationale / Risk                                                                                                                                     | Acceptance (G-W-T)                                                                                                                                                                                                                                        | Evidence (test/log/scan/policy)                                                                               | Trace (issue/link) | Owner   | Status       | Priority        | Severity          | Tags                           |
-|-------------|----------------------|------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------|--------------------|---------|--------------|-----------------|-------------------|--------------------------------|
-| **NFR-009** | Импорт CSV           | **Security-InputValidation** | Для POST `/api/import/csv`: максимальный размер тела ≤ **10 MiB**, MIME-тип строго `text/csv`; схема CSV должна содержать только разрешённые столбцы (`id`, `name`, `email`, `created_at`); неизвестные поля или неверный тип данных приводят к **400**, превышение размера — к **413**. | Предотвращает DoS-атаки, загрузку повреждённых или нерелевантных файлов, защищает от инъекций и потери консистентности данных.                       | **Given** CSV-файл 15 MiB с лишним столбцом `age` и неверным MIME-типом<br>**When** пользователь с ролью `manager` выполняет POST `/api/import/csv`<br>**Then** ответ имеет код 413 или 400, тело в формате RFC 7807, без стэктрейса, с `correlation_id`. | e2e-тест `import-csv-validation`; схема DTO-валидатора; пример логов 413.                                     | #132               | backend | **Proposed** | **P1 – High**   | **S2 – Major**    | validation,input,csv           |
-| **NFR-010** | Импорт CSV           | **Data-Integrity**           | Импорт выполняется в рамках одной транзакции: при наличии хотя бы одной ошибки валидации весь CSV откатывается. В БД не должно появляться частично вставленных данных. Проверка формата, типов и уникальности выполняется до коммита.                                                    | Обеспечивает атомарность и целостность данных, исключает расхождения между логикой импорта и фактическим содержимым таблиц.                          | **Given** CSV-файл с 100 строками, где 3 содержат некорректные email-адреса<br>**When** выполняется POST `/api/import/csv`<br>**Then** импорт завершается ошибкой, транзакция откатывается, а в БД отсутствуют новые записи.                              | Интеграционный тест `import-rollback`; логи транзакций БД; политика миграций.                                 | #133               | backend | **Proposed** | **P1 – High**   | **S1 – Critical** | integrity,transaction,rollback |
-| **NFR-011** | Импорт CSV           | **Scalability**              | Сервис должен сохранять стабильную производительность при увеличении объёма импорта в 2 раза. При росте размера CSV с **50 MB → 100 MB**, время обработки одного задания увеличивается не более чем в **1.5×**, без превышения **1 %** ошибок `5xx`.                                     | Гарантирует устойчивость системы при росте числа импорируемых файлов или объёма данных, подтверждает корректность работы фоновых заданий и очередей. | **Given** очередь фоновых заданий с CSV-файлами объёмом 50 MB<br>**When** нагрузка увеличена до 100 MB на файл<br>**Then** среднее время выполнения задачи возрастает ≤ 1.5 × базового, доля ошибок `5xx` ≤ 1 %.                                          | Нагрузочный тест `import-scale-test`; метрики автоскейлинга; отчёт Prometheus/Grafana.                        | #134               | devops  | **Proposed** | **P2 – Medium** | **S2 – Major**    | scalability,queue,background   |
-| **NFR-012** | Импорт CSV           | **Performance**              | Для POST `/api/import/csv`: P95 времени отклика ≤ **500 мс** при нагрузке **20 RPS** в течение **5 минут**, доля ошибок ≤ **1 %**.                                                                                                                                                       | Обеспечивает приемлемое время отклика при массовых загрузках и согласуется с целевыми SLO.                                                           | **Given** сервис находится в рабочем состоянии<br>**When** нагрузка 20 RPS на `/api/import/csv` удерживается 5 мин<br>**Then** P95 ≤ 500 мс и error rate ≤ 1 %.                                                                                           | Нагрузочный тест `load-20rps`; метрика `http_server_requests_seconds{quantile="0.95"}`; отчёт Gatling/JMeter. | #135               | qa      | **Proposed** | **P2 – Medium** | **S3 – Minor**    | performance,slo,latency        |
+| ID      | User Story / Feature | Category                     | Requirement (NFR)                                                                                                                                                                                                                                                                        | Rationale / Risk                                                                                                                                     | Acceptance (G-W-T)                                                                                                                                                                                                                                        | Evidence (test/log/scan/policy)                                                                               | Trace (issue/link) | Owner   | Status       | Priority        | Severity          | Tags                           |
+|---------|----------------------|------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|------------------------------------------------------------------------------------------------------------------------------------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|---------------------------------------------------------------------------------------------------------------|--------------------|---------|--------------|-----------------|-------------------|--------------------------------|
+| NFR-009 | Импорт CSV           | **Security-InputValidation** | Для POST `/api/import/csv`: максимальный размер тела ≤ **10 MiB**, MIME-тип строго `text/csv`; схема CSV должна содержать только разрешённые столбцы (`id`, `name`, `email`, `created_at`); неизвестные поля или неверный тип данных приводят к **400**, превышение размера — к **413**. | Предотвращает DoS-атаки, загрузку повреждённых или нерелевантных файлов, защищает от инъекций и потери консистентности данных.                       | **Given** CSV-файл 15 MiB с лишним столбцом `age` и неверным MIME-типом<br>**When** пользователь с ролью `manager` выполняет POST `/api/import/csv`<br>**Then** ответ имеет код 413 или 400, тело в формате RFC 7807, без стэктрейса, с `correlation_id`. | e2e-тест `import-csv-validation`; схема DTO-валидатора; пример логов 413.                                     | #132               | backend | **Proposed** | **P1 – High**   | **S2 – Major**    | validation,input,csv           |
+| NFR-010 | Импорт CSV           | **Data-Integrity**           | Импорт выполняется в рамках одной транзакции: при наличии хотя бы одной ошибки валидации весь CSV откатывается. В БД не должно появляться частично вставленных данных. Проверка формата, типов и уникальности выполняется до коммита.                                                    | Обеспечивает атомарность и целостность данных, исключает расхождения между логикой импорта и фактическим содержимым таблиц.                          | **Given** CSV-файл с 100 строками, где 3 содержат некорректные email-адреса<br>**When** выполняется POST `/api/import/csv`<br>**Then** импорт завершается ошибкой, транзакция откатывается, а в БД отсутствуют новые записи.                              | Интеграционный тест `import-rollback`; логи транзакций БД; политика миграций.                                 | #133               | backend | **Proposed** | **P1 – High**   | **S1 – Critical** | integrity,transaction,rollback |
+| NFR-011 | Импорт CSV           | **Scalability**              | Сервис должен сохранять стабильную производительность при увеличении объёма импорта в 2 раза. При росте размера CSV с **50 MB → 100 MB**, время обработки одного задания увеличивается не более чем в **1.5×**, без превышения **1 %** ошибок `5xx`.                                     | Гарантирует устойчивость системы при росте числа импорируемых файлов или объёма данных, подтверждает корректность работы фоновых заданий и очередей. | **Given** очередь фоновых заданий с CSV-файлами объёмом 50 MB<br>**When** нагрузка увеличена до 100 MB на файл<br>**Then** среднее время выполнения задачи возрастает ≤ 1.5 × базового, доля ошибок `5xx` ≤ 1 %.                                          | Нагрузочный тест `import-scale-test`; метрики автоскейлинга; отчёт Prometheus/Grafana.                        | #134               | devops  | **Proposed** | **P2 – Medium** | **S2 – Major**    | scalability,queue,background   |
+| NFR-012 | Импорт CSV           | **Performance**              | Для POST `/api/import/csv`: P95 времени отклика ≤ **500 мс** при нагрузке **20 RPS** в течение **5 минут**, доля ошибок ≤ **1 %**.                                                                                                                                                       | Обеспечивает приемлемое время отклика при массовых загрузках и согласуется с целевыми SLO.                                                           | **Given** сервис находится в рабочем состоянии<br>**When** нагрузка 20 RPS на `/api/import/csv` удерживается 5 мин<br>**Then** P95 ≤ 500 мс и error rate ≤ 1 %.                                                                                           | Нагрузочный тест `load-20rps`; метрика `http_server_requests_seconds{quantile="0.95"}`; отчёт Gatling/JMeter. | #135               | qa      | **Proposed** | **P2 – Medium** | **S3 – Minor**    | performance,slo,latency        |
 
